--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-pyrogram>=2.0.30 
+pyrogram
 tgcrypto 
-pymongo[srv]==3.12.3 
-motor==2.5.1 
-marshmallow==3.14.1 
-umongo==3.0.1 
+pymongo[srv]
+motor
+marshmallow
+umongo
 requests 
 bs4 
 git+https://github.com/Joelkb/cinemagoer 
@@ -14,7 +14,7 @@ aiohttp
 
 #---master---# 
 #Telethroid==0.0.10 
-PyLeaves==1.0.2 
+PyLeaves
   
   
  
